# rust-demos

./: .gitignore  README.md  notes  practice  practice.rs  xo.rs
kioto/: Cargo.toml
kioto/src/: main.rs
library_crate_root/: Cargo.toml
library_crate_root/src/: back_of_house.rs  lib.rs  main.rs
mini_redis/: Cargo.toml
mini_redis/example/: hello-redis.rs
mini_redis/src/: main.rs  notes.txt
mini_redis/src/example/: hello-redis.rs  mutex.rs
web/: Cargo.toml
web/src/: main.rs
xo_crate/: Cargo.toml
xo_crate/src/: main.rs
