[package]
name = "mini_redis"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"

[[example]]
name = "hello"
path = "/home/vesper2/Documents/rust/mini_redis/src/example/hello-redis.rs"

[[example]]
name = "mutex"
path = "/home/vesper2/Documents/rust/mini_redis/src/example/mutex.rs"